Fixed an issue on Firefox.

--- a/app/styles/style.styl
+++ b/app/styles/style.styl
@@ -1,6 +1,6 @@
 transition()
   -webkit-transition arguments
-  -moz-transition n 
+  -moz-transition arguments
   -o-transition arguments
   -ms-transition arguments
   transition arguments
@@ -127,7 +127,7 @@ body
   bottom 0
 
   border-top 1px solid #DADADA
-  
+
   .nav
     margin-bottom 0px
 
@@ -163,7 +163,7 @@ body
   &.playing
     .btn-play
       display none
-    
+
     .btn-pause
       display inline-block
 
@@ -186,7 +186,7 @@ body
 #shortcuts-container
   text-align center
   padding 10px
-  
+
   position relative
   top 0px
   left 0px
